[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "volttron-lib-sql-historian"
version = "2.0.0rc0"
description = "A library for supporting sql based historians."
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-lib-sql-historian"
homepage = "https://github.com/eclipse-volttron/volttron-lib-sql-historian"
keywords = []
packages = [ { include = "historian", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
#volttron-lib-base-historian = "^0.2.0rc4"
volttron-lib-base-historian = ">=2.0.0rc0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
Sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
